--- a/PrototypeDocument.Infrastructure/PrototypeDocument.Infrastructure.csproj
+++ b/PrototypeDocument.Infrastructure/PrototypeDocument.Infrastructure.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PrototypeDocument.Domain\PrototypeDocument.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
